error.txt
src/parser/stmt.cpp:33:36: error: no member named 'str' in 'std::basic_ostream<char>'
            return (x << as_int()).str();
                   ~~~~~~~~~~~~~~~ ^
src/parser/stmt.cpp:35:38: error: no member named 'str' in 'std::basic_ostream<char>'
            return (x << as_float()).str();
                   ~~~~~~~~~~~~~~~~~ ^
2 errors generated.
src/catalog/catalog.cpp:158:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
1 warning generated.
src/evaluator/evaluator.cpp:14:5: error: unknown type name 'uuid_string_t'
    uuid_string_t uuid_str;
    ^
1 error generated.
src/evaluator/main.cpp:45:45: error: no member named 'str' in 'std::basic_ostream<char>'
        ddd = tmp1 + (stringstream() << ii).str() + ");";
                     ~~~~~~~~~~~~~~~~~~~~~~ ^
1 error generated.
src/index/IndexManager.cpp:115:1: warning: control may reach end of non-void function [-Wreturn-type]
}
^
src/index/IndexManager.cpp:231:1: warning: control may reach end of non-void function [-Wreturn-type]
}
^
src/index/IndexManager.cpp:810:1: warning: control may reach end of non-void function [-Wreturn-type]
}
^
src/index/IndexManager.cpp:1036:1: warning: control may reach end of non-void function [-Wreturn-type]
}
^
4 warnings generated.
src/parser/parser.y:207:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
1 warning generated.
lex.yy.c:820:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register yy_state_type yy_current_state;
        ^~~~~~~~~
lex.yy.c:821:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register char *yy_cp, *yy_bp;
        ^~~~~~~~~
lex.yy.c:821:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register char *yy_cp, *yy_bp;
        ^~~~~~~~~
lex.yy.c:822:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register int yy_act;
        ^~~~~~~~~
lex.yy.c:870:4: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
                        register YY_CHAR yy_c = yy_ec[YY_SC_TO_UI(*yy_cp)];
                        ^~~~~~~~~
lex.yy.c:1391:6: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register char *dest = YY_CURRENT_BUFFER_LVALUE->yy_ch_buf;
        ^~~~~~~~~
lex.yy.c:1392:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register char *source = (yytext_ptr);
        ^~~~~~~~~
lex.yy.c:1393:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register int number_to_move, i;
        ^~~~~~~~~
lex.yy.c:1393:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register int number_to_move, i;
        ^~~~~~~~~
lex.yy.c:1525:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register yy_state_type yy_current_state;
        ^~~~~~~~~
lex.yy.c:1526:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register char *yy_cp;
        ^~~~~~~~~
lex.yy.c:1532:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
                register YY_CHAR yy_c = (*yy_cp ? yy_ec[YY_SC_TO_UI(*yy_cp)] : 1);
                ^~~~~~~~~
lex.yy.c:1557:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register int yy_is_jam;
        ^~~~~~~~~
lex.yy.c:1558:6: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register char *yy_cp = (yy_c_buf_p);
        ^~~~~~~~~
lex.yy.c:1560:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register YY_CHAR yy_c = 1;
        ^~~~~~~~~
lex.yy.c:1580:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
        register char *yy_cp;
        ^~~~~~~~~
lex.yy.c:1590:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
                register int number_to_move = (yy_n_chars) + 2;
                ^~~~~~~~~
lex.yy.c:1591:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
                register char *dest = &YY_CURRENT_BUFFER_LVALUE->yy_ch_buf[
                ^~~~~~~~~
lex.yy.c:1593:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
                register char *source =
                ^~~~~~~~~
19 warnings generated.
make: *** [main] Error 1
